[package]
name = "dvdromcopy"
version = "0.1.0"
edition = "2021"
links = "dvdcss"
license = "0BSD"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
crc = "3.2.1"
env_logger = "0.11.5"
log = "0.4.22"
lru = "0.12.5"
static_assertions = "1.1.0"
thiserror = "2.0.3"

[build-dependencies]
pkg-config = "0.3"
